--- a/projects/cute/project.json
+++ b/projects/cute/project.json
@@ -589,6 +589,573 @@
       "note": 98,
       "position": 8880,
       "length": 240
+    },
+    {
+      "id": "_1my268q1m",
+      "trackId": "_gvdkidxyp",
+      "note": 83,
+      "position": 9600,
+      "length": 240
+    },
+    {
+      "id": "_sjmj9hgwc",
+      "trackId": "_gvdkidxyp",
+      "note": 79,
+      "position": 10080,
+      "length": 240
+    },
+    {
+      "id": "_m5crzll43",
+      "trackId": "_gvdkidxyp",
+      "note": 81,
+      "position": 10320,
+      "length": 240
+    },
+    {
+      "id": "_gg51rxp0b",
+      "trackId": "_gvdkidxyp",
+      "note": 81,
+      "position": 10800,
+      "length": 240
+    },
+    {
+      "id": "_rty9ezahb",
+      "trackId": "_gvdkidxyp",
+      "note": 86,
+      "position": 11040,
+      "length": 240
+    },
+    {
+      "id": "_4np9nawgz",
+      "trackId": "_gvdkidxyp",
+      "note": 81,
+      "position": 11280,
+      "length": 240
+    },
+    {
+      "id": "_gn9ww4kvb",
+      "trackId": "_gvdkidxyp",
+      "note": 81,
+      "position": 11520,
+      "length": 240
+    },
+    {
+      "id": "_tgqi0hddx",
+      "trackId": "_gvdkidxyp",
+      "note": 79,
+      "position": 11760,
+      "length": 240
+    },
+    {
+      "id": "_rc37y89uz",
+      "trackId": "_gvdkidxyp",
+      "note": 78,
+      "position": 12000,
+      "length": 240
+    },
+    {
+      "id": "_6uxayqj75",
+      "trackId": "_gvdkidxyp",
+      "note": 79,
+      "position": 12240,
+      "length": 240
+    },
+    {
+      "id": "_36g39o88h",
+      "trackId": "_gvdkidxyp",
+      "note": 79,
+      "position": 12720,
+      "length": 240
+    },
+    {
+      "id": "_ioxbk7rce",
+      "trackId": "_gvdkidxyp",
+      "note": 78,
+      "position": 12960,
+      "length": 240
+    },
+    {
+      "id": "_n0g8t5a01",
+      "trackId": "_gvdkidxyp",
+      "note": 76,
+      "position": 13200,
+      "length": 240
+    },
+    {
+      "id": "_g67y2xdvc",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 9600,
+      "length": 240
+    },
+    {
+      "id": "_ggu7r94lx",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 10080,
+      "length": 240
+    },
+    {
+      "id": "_atm3rnv86",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 10560,
+      "length": 240
+    },
+    {
+      "id": "_c9x7uv8ru",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 11040,
+      "length": 240
+    },
+    {
+      "id": "_jtif2tmxs",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 11520,
+      "length": 240
+    },
+    {
+      "id": "_0vgdy9vbz",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 12000,
+      "length": 240
+    },
+    {
+      "id": "_wmfarx9yx",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 12480,
+      "length": 240
+    },
+    {
+      "id": "_i3a59u6km",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 12960,
+      "length": 240
+    },
+    {
+      "id": "_a0jj1ghmk",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 13440,
+      "length": 240
+    },
+    {
+      "id": "_eaio7oeql",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 13920,
+      "length": 240
+    },
+    {
+      "id": "_4h3340g2p",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 14400,
+      "length": 240
+    },
+    {
+      "id": "_86j5z5qbj",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 14880,
+      "length": 240
+    },
+    {
+      "id": "_1jmpr5bqm",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 15360,
+      "length": 240
+    },
+    {
+      "id": "_s874edi7o",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 15840,
+      "length": 240
+    },
+    {
+      "id": "_6ia18i6mt",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 16320,
+      "length": 240
+    },
+    {
+      "id": "_anar7pgkx",
+      "trackId": "_123pvido2",
+      "note": 31,
+      "position": 16800,
+      "length": 240
+    },
+    {
+      "id": "_c397zocyx",
+      "trackId": "_yjpud334f",
+      "note": 45,
+      "position": 9600,
+      "length": 240
+    },
+    {
+      "id": "_v1vweqn2h",
+      "trackId": "_yjpud334f",
+      "note": 38,
+      "position": 10320,
+      "length": 240
+    },
+    {
+      "id": "_8x38j7amw",
+      "trackId": "_yjpud334f",
+      "note": 43,
+      "position": 11520,
+      "length": 240
+    },
+    {
+      "id": "_x74kag8g5",
+      "trackId": "_yjpud334f",
+      "note": 40,
+      "position": 12240,
+      "length": 240
+    },
+    {
+      "id": "_zbbqkc5kj",
+      "trackId": "_yjpud334f",
+      "note": 45,
+      "position": 13440,
+      "length": 240
+    },
+    {
+      "id": "_1qr9k01qv",
+      "trackId": "_yjpud334f",
+      "note": 38,
+      "position": 14160,
+      "length": 240
+    },
+    {
+      "id": "_ez4rp12lr",
+      "trackId": "_yjpud334f",
+      "note": 43,
+      "position": 16080,
+      "length": 240
+    },
+    {
+      "id": "_saqrokj7i",
+      "trackId": "_yjpud334f",
+      "note": 43,
+      "position": 16560,
+      "length": 240
+    },
+    {
+      "id": "_r7j4vw0nr",
+      "trackId": "_yjpud334f",
+      "note": 55,
+      "position": 16800,
+      "length": 240
+    },
+    {
+      "id": "_blb8v8p4e",
+      "trackId": "_yjpud334f",
+      "note": 41,
+      "position": 15120,
+      "length": 240
+    },
+    {
+      "id": "_11tbv3s6k",
+      "trackId": "_gvdkidxyp",
+      "note": 79,
+      "position": 13680,
+      "length": 240
+    },
+    {
+      "id": "_jmfvnc6jn",
+      "trackId": "_gvdkidxyp",
+      "note": 83,
+      "position": 13920,
+      "length": 240
+    },
+    {
+      "id": "_z63tso84q",
+      "trackId": "_gvdkidxyp",
+      "note": 81,
+      "position": 14160,
+      "length": 240
+    },
+    {
+      "id": "_xoeqxrek6",
+      "trackId": "_gvdkidxyp",
+      "note": 79,
+      "position": 14640,
+      "length": 240
+    },
+    {
+      "id": "_mgm9ae9x2",
+      "trackId": "_gvdkidxyp",
+      "note": 78,
+      "position": 14880,
+      "length": 240
+    },
+    {
+      "id": "_hxgzilc8q",
+      "trackId": "_gvdkidxyp",
+      "note": 81,
+      "position": 15120,
+      "length": 240
+    },
+    {
+      "id": "_s21on82g5",
+      "trackId": "_gvdkidxyp",
+      "note": 86,
+      "position": 15600,
+      "length": 240
+    },
+    {
+      "id": "_1xp17u6sd",
+      "trackId": "_gvdkidxyp",
+      "note": 88,
+      "position": 16080,
+      "length": 240
+    },
+    {
+      "id": "_yl9t3lgz8",
+      "trackId": "_gvdkidxyp",
+      "note": 76,
+      "position": 16560,
+      "length": 240
+    },
+    {
+      "id": "_0aurgmfpo",
+      "trackId": "_gvdkidxyp",
+      "note": 79,
+      "position": 16800,
+      "length": 240
+    },
+    {
+      "id": "_87mlhklmw",
+      "trackId": "_gvdkidxyp",
+      "note": 81,
+      "position": 17040,
+      "length": 240
+    },
+    {
+      "id": "_c71y8sz4x",
+      "trackId": "_23c88dxvj",
+      "note": 59,
+      "position": 9600,
+      "length": 240
+    },
+    {
+      "id": "_u2jdouvjk",
+      "trackId": "_23c88dxvj",
+      "note": 64,
+      "position": 9600,
+      "length": 240
+    },
+    {
+      "id": "_gq6mtkz3u",
+      "trackId": "_23c88dxvj",
+      "note": 67,
+      "position": 9600,
+      "length": 240
+    },
+    {
+      "id": "_lht0jh6l8",
+      "trackId": "_23c88dxvj",
+      "note": 59,
+      "position": 10320,
+      "length": 240
+    },
+    {
+      "id": "_s3p6nv0cs",
+      "trackId": "_23c88dxvj",
+      "note": 63,
+      "position": 10320,
+      "length": 240
+    },
+    {
+      "id": "_aeqgrzlyi",
+      "trackId": "_23c88dxvj",
+      "note": 67,
+      "position": 10320,
+      "length": 240
+    },
+    {
+      "id": "_0njvj8agi",
+      "trackId": "_23c88dxvj",
+      "note": 59,
+      "position": 11520,
+      "length": 240
+    },
+    {
+      "id": "_ryw4jp2s7",
+      "trackId": "_23c88dxvj",
+      "note": 62,
+      "position": 11520,
+      "length": 240
+    },
+    {
+      "id": "_aemv65u66",
+      "trackId": "_23c88dxvj",
+      "note": 66,
+      "position": 11520,
+      "length": 240
+    },
+    {
+      "id": "_zddr8ct9q",
+      "trackId": "_23c88dxvj",
+      "note": 59,
+      "position": 12240,
+      "length": 240
+    },
+    {
+      "id": "_wcntvym7h",
+      "trackId": "_23c88dxvj",
+      "note": 62,
+      "position": 12240,
+      "length": 240
+    },
+    {
+      "id": "_oi6518bfr",
+      "trackId": "_23c88dxvj",
+      "note": 67,
+      "position": 12240,
+      "length": 240
+    },
+    {
+      "id": "_gt33x6l7a",
+      "trackId": "_23c88dxvj",
+      "note": 59,
+      "position": 13440,
+      "length": 240
+    },
+    {
+      "id": "_r2mv2koeq",
+      "trackId": "_23c88dxvj",
+      "note": 64,
+      "position": 13440,
+      "length": 240
+    },
+    {
+      "id": "_u31jlb17v",
+      "trackId": "_23c88dxvj",
+      "note": 67,
+      "position": 13440,
+      "length": 240
+    },
+    {
+      "id": "_ysni0j68z",
+      "trackId": "_23c88dxvj",
+      "note": 59,
+      "position": 14160,
+      "length": 240
+    },
+    {
+      "id": "_gmibx9jde",
+      "trackId": "_23c88dxvj",
+      "note": 63,
+      "position": 14160,
+      "length": 240
+    },
+    {
+      "id": "_z6ol8r0ju",
+      "trackId": "_23c88dxvj",
+      "note": 66,
+      "position": 14160,
+      "length": 240
+    },
+    {
+      "id": "_ytpftpkmk",
+      "trackId": "_23c88dxvj",
+      "note": 59,
+      "position": 16080,
+      "length": 240
+    },
+    {
+      "id": "_xu4uilqgh",
+      "trackId": "_23c88dxvj",
+      "note": 65,
+      "position": 16080,
+      "length": 240
+    },
+    {
+      "id": "_3oge1b3v0",
+      "trackId": "_23c88dxvj",
+      "note": 67,
+      "position": 16080,
+      "length": 240
+    },
+    {
+      "id": "_66j3op54m",
+      "trackId": "_364qpswtp",
+      "note": 95,
+      "position": 9840,
+      "length": 240
+    },
+    {
+      "id": "_1zq86tqiz",
+      "trackId": "_364qpswtp",
+      "note": 93,
+      "position": 11760,
+      "length": 240
+    },
+    {
+      "id": "_3e8bx15jj",
+      "trackId": "_364qpswtp",
+      "note": 95,
+      "position": 13680,
+      "length": 240
+    },
+    {
+      "id": "_18gn6rsfc",
+      "trackId": "_364qpswtp",
+      "note": 93,
+      "position": 15600,
+      "length": 240
+    },
+    {
+      "id": "_vfflar63q",
+      "trackId": "_364qpswtp",
+      "note": 91,
+      "position": 16560,
+      "length": 240
+    },
+    {
+      "id": "_09padcg8n",
+      "trackId": "_23c88dxvj",
+      "note": 57,
+      "position": 15120,
+      "length": 240
+    },
+    {
+      "id": "_cbus4in1p",
+      "trackId": "_23c88dxvj",
+      "note": 60,
+      "position": 15120,
+      "length": 240
+    },
+    {
+      "id": "_3z431tvtj",
+      "trackId": "_23c88dxvj",
+      "note": 65,
+      "position": 15120,
+      "length": 240
+    },
+    {
+      "id": "_0yhzhfya2",
+      "trackId": "_yjpud334f",
+      "note": 36,
+      "position": 15600,
+      "length": 240
+    },
+    {
+      "id": "_a4s76djo5",
+      "trackId": "_yjpud334f",
+      "note": 41,
+      "position": 15840,
+      "length": 240
     }
   ],
   "tracks": [
@@ -738,11 +1305,11 @@
     }
   ],
   "focusedTrack": "_yjpud334f",
-  "cursor": 3600,
+  "cursor": 3762,
   "stepLength": 240,
   "visibleArea": {
     "from": 0,
-    "to": 15543.58565737051
+    "to": 15543.585657370484
   },
   "recording": true
 }
